# development-stats

./: .gitignore  README.md  index.html  pyproject.toml  visualize_stats.py
.github/workflows/: deploy-stats.yml
daily/: stats-by-category-2025-08-01.csv  stats-by-category-2025-08-03.csv  stats-by-category-2025-08-04.csv  stats-by-category-2025-08-05.csv  stats-by-category-2025-08-10.csv  stats-by-category-2025-08-14.csv  stats-by-category-2025-08-18.csv  stats-by-category-2025-08-19.csv  stats-by-category-2025-08-20.csv  stats-by-category-2025-08-22.csv  stats-by-category-2025-08-29.csv  stats-by-category-2025-08-31.csv  stats-by-category-2025-09-01.csv  stats-by-category-2025-09-02.csv  stats-by-category-2025-09-04.csv  stats-by-category-2025-09-08.csv  stats-by-category-2025-09-09.csv  stats-by-category-2025-09-11.csv  stats-by-category-2025-09-12.csv  stats-per-repo-2025-08-02.csv  stats-per-repo-2025-08-03.csv  stats-per-repo-2025-08-05.csv  stats-per-repo-2025-08-08.csv  stats-per-repo-2025-08-09.csv  stats-per-repo-2025-08-10.csv  stats-per-repo-2025-08-12.csv  stats-per-repo-2025-08-13.csv  stats-per-repo-2025-08-15.csv  stats-per-repo-2025-08-16.csv  stats-per-repo-2025-08-17.csv  stats-per-repo-2025-08-18.csv  stats-per-repo-2025-08-20.csv  stats-per-repo-2025-08-24.csv  stats-per-repo-2025-08-25.csv  stats-per-repo-2025-08-26.csv  stats-per-repo-2025-08-27.csv  stats-per-repo-2025-08-28.csv  stats-per-repo-2025-08-31.csv  stats-per-repo-2025-09-01.csv  stats-per-repo-2025-09-02.csv  (+3 more)
gh_pages/: index.html  style.css  template.html
(+673 files in other folders)
