[project]
name = "development-stats-visualizer"
version = "0.1.0"
description = "Visualize daily development stats for GitHub Pages."
authors = [
    { name = "DoreDoreDo" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "tabulate (>=0.9.0,<0.10.0)",
    "kaleido (>=1.2.0,<2.0.0)"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["visualize_stats"]

[tool.setuptools.packages]
find = {}  # Don't automatically find packages

[tool.setuptools.package-data]
"*" = ["daily/*.csv"]
